--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
   	<version>0.0.4</version>
 	<packaging>jar</packaging>
 	<name>authApp</name>
-	<description>Bridges the elements of risk analysis expert system together</description>
+	<description>User Registration and Authorization</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
