--- a/src/main/resources/db_connection.properties
+++ b/src/main/resources/db_connection.properties
@@ -2,7 +2,7 @@
 db.username= [please update]
 db.password= [please update]
 db.hostname = [please update]
-db.port = 1522
+db.port = [please update]
 db.servicename = [please update]
 			
 #Connection pool properties
